--- a/Road to Recovery/pages/patientForm.html
+++ b/Road to Recovery/pages/patientForm.html
@@ -672,7 +672,7 @@
                 patient = { displayName: displayName, id: Pid }
                 escorted = {
                     pat: patient, id: Eid, firstNameH: "אנונימי", firstNameA: "", lastNameH: "אנונימי", lastNameA: "", city: "", cellPhone: escortPhone, cellphone2: "", homePhone: "",
-                    contactType: "אנונימי", gender: "Unknown", IsActive: true, EnglishName: "Unnamed"
+                    contactType: "אנונימי", gender: "Unknown", IsActive: true, EnglishName: "Unnamed", IsAnonymous: true
                 }
 
                 $.ajax({
