--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -180,6 +180,7 @@
                     $("#rp_pil_vl_ride_month").click(on_report_click);
                     $("#rp_pil_vl_ride_recent_period").click(on_report_click);
                     $("#rp_center_daily_by_month").click(on_report_click);
+                    $("#rp_center_monthly_by_year").click(on_report_click);
  
 
 
@@ -284,6 +285,7 @@
                                         <li><a class="report_link_cls" id="rp_amuta_vls_km">מתנדבים – שנתי</a></li>
                                         <li><a class="report_link_cls" id="rp_amuta_vls_per_month"> מספר המתנדבים המסיעים פר חודש</a></li>
                                         <li><a class="report_link_cls" id="rp_center_daily_by_month"> מרכז תיאום - מבט יומי</a></li>
+                                        <li><a class="report_link_cls" id="rp_center_monthly_by_year"> מרכז תיאום - מבט חודשי</a></li>
                                     </ul>
                                 </li>
                                 <li>
@@ -433,7 +435,33 @@
                                     </thead>
                                     <tbody></tbody>
                                 </table>
-                            </div>                            <div id="wait" style="display:none;width:69px;height:89px;position:fixed;top:50%;left:50%;padding:2px;">
+                            </div>
+                            <div id="div_table_rp_center_monthly_by_year" style="display:none" class="card-box table-responsive">
+                                <table id="table_rp_center_monthly_by_year" class="table table-striped table-bordered">
+                                    <thead>
+                                        <tr>
+                                            <th title="People" class="timeCustomWidth">  </th>
+                                            <th title="1" class="timeCustomWidth">1</th>
+                                            <th title="2" class="timeCustomWidth">2</th>
+                                            <th title="3" class="timeCustomWidth">3</th>
+                                            <th title="4" class="timeCustomWidth">4</th>
+                                            <th title="5" class="timeCustomWidth">5</th>
+                                            <th title="6" class="timeCustomWidth">6</th>
+                                            <th title="7" class="timeCustomWidth">7</th>
+                                            <th title="8" class="timeCustomWidth">8</th>
+                                            <th title="9" class="timeCustomWidth">9</th>
+                                            <th title="10" class="timeCustomWidth">10</th>
+                                            <th title="11" class="timeCustomWidth">11</th>
+                                            <th title="12" class="timeCustomWidth">12</th>
+                                            <th title="Total" class="timeCustomWidth">סה"כ שנתי</th>
+
+                                        </tr>
+                                    </thead>
+                                    <tbody></tbody>
+                                </table>
+                            </div>
+
+                            <div id="wait" style="display:none;width:69px;height:89px;position:fixed;top:50%;left:50%;padding:2px;">
                                 <img src="../../Media/Wedges-3s-200px.gif" width="64" height="64" />
                             </div>
                             <br />
