--- a/Road to Recovery/pages/viewRidePats.html
+++ b/Road to Recovery/pages/viewRidePats.html
@@ -87,13 +87,12 @@
         let timeFilteredArr = [];
         let ridePatNums2MarkDeleted = [];
         let ridePatNums2MarkRecovered = [];
-
-
+        let { convertDBDate2FrontEndDate } = GENERAL.USEFULL_FUNCTIONS;
 
         $(document).ready(function () {
 
             includeHTML();
-            let { COPYWRITE } = GENERAL;
+            let { COPYWRITE } = GENERAL;;
             $('#rights').html(COPYWRITE());
 
             $('[data-toggle="tooltip"]').tooltip();
@@ -316,7 +315,7 @@
         function refreshTable() {
             //this function doesnt changeing timeFilteredArr or fetching data from the back-end
             $('#wait').show();
-            setTimeout(() => { $('#wait').hide() },3000);
+            setTimeout(() => { $('#wait').hide() }, 3000);
 
 
             checkCookie();
@@ -456,7 +455,7 @@
                         Coordinator: timeFilteredArr[i].Coordinator.DisplayName,
                         Buttons: btnStr,
                         IsAnonymous: '',
-                        LastModified: timeFilteredArr[i].LastModified
+                        LastModified: convertDBDate2FrontEndDate(timeFilteredArr[i].LastModified).toLocaleString('he-IL', { dateStyle: "short", timeStyle: "short" })
                     }
                 }
                 else {
@@ -489,7 +488,7 @@
 
                         Buttons: buttons,
                         IsAnonymous: timeFilteredArr[i].Pat.IsAnonymous,
-                        LastModified: timeFilteredArr[i].LastModified
+                        LastModified: convertDBDate2FrontEndDate(timeFilteredArr[i].LastModified).toLocaleString('he-IL', { dateStyle: "short", timeStyle: "short" })
                     }
                 }
 
@@ -561,8 +560,8 @@
         const MarkAsRemoved_FewRidePats = () => {
 
             let txt2post = `האם אתם בטוחים?
-                                                האם למחוק את כל ${ridePatNums2MarkDeleted.length} ההסעות שנבחרו ברשימה המוצגת לפניך?
-                                                `;
+                                                                                האם למחוק את כל ${ridePatNums2MarkDeleted.length} ההסעות שנבחרו ברשימה המוצגת לפניך?
+                                                                                `;
             swal({
                 title: "האם אתם בטוחים?",
                 text: txt2post,
@@ -575,13 +574,15 @@
                 closeOnCancel: false
             }, function (isConfirm) {
                 if (isConfirm) {
+                    $('#wait').show();
                     $.ajax({
                         dataType: "json",
                         url: "WebService.asmx/ChangeArrayOF_RidePatStatuses",
                         contentType: "application/json; charset=utf-8",
                         type: "POST",
-                        data: JSON.stringify({ newStatus: 'נמחקה', ridePatNums: ridePatNums2MarkDeleted }),
+                        data: JSON.stringify({ newStatus: 'נמחקה', ridePatNums: ridePatNums2MarkDeleted, clientUTCTimeStemp: new Date().toUTCString() }),
                         success: function (data) {
+                            $('#wait').hide();
                             swal({
                                 title: "ההסעות סומנו כמחוקה 🗑️",
                                 timer: 1000,
@@ -596,7 +597,10 @@
                                 ImportDataByTimeFilters();
                             }, 1001);//literally means go fetch new data from server side with the same time frame
                         },
-                        error: function (err) { alert("Error in deleteRidePat:" + err.responseText); }
+                        error: function (err) {
+                            $('#wait').hide();
+                            alert("Error in deleteRidePat:" + err.responseText);
+                        }
                     });
 
                 } else {
@@ -608,8 +612,8 @@
         const Recover_FewRidePats = () => {
 
             let txt2post = `האם אתם בטוחים?
-                                                האם למחוק את כל ${ridePatNums2MarkRecovered.length} ההסעות שנבחרו ברשימה המוצגת לפניך?
-                                                `;
+                                                                                האם למחוק את כל ${ridePatNums2MarkRecovered.length} ההסעות שנבחרו ברשימה המוצגת לפניך?
+                                                                                `;
             swal({
                 title: "האם אתם בטוחים?",
                 text: txt2post,
@@ -622,13 +626,15 @@
                 closeOnCancel: false
             }, function (isConfirm) {
                 if (isConfirm) {
+                    $('#wait').show();
                     $.ajax({
                         dataType: "json",
                         url: "WebService.asmx/ChangeArrayOF_RidePatStatuses",
                         contentType: "application/json; charset=utf-8",
                         type: "POST",
-                        data: JSON.stringify({ newStatus: 'ממתינה לשיבוץ', ridePatNums: ridePatNums2MarkRecovered }),
+                        data: JSON.stringify({ newStatus: 'ממתינה לשיבוץ', ridePatNums: ridePatNums2MarkRecovered, clientUTCTimeStemp: new Date().toUTCString() }),
                         success: function (data) {
+                            $('#wait').hide();
                             swal({
                                 title: "ההסעות שוחזרו 🗑️",
                                 timer: 1000,
@@ -643,7 +649,10 @@
                                 ImportDataByTimeFilters();
                             }, 1001);//literally means go fetch new data from server side with the same time frame
                         },
-                        error: function (err) { alert("Error in Recover_FewRidePats:" + err.responseText); }
+                        error: function (err) {
+                            $('#wait').hide();
+                            alert("Error in Recover_FewRidePats:" + err.responseText);
+                        }
                     });
 
                 } else {
@@ -765,8 +774,8 @@
                 let date = tr.getElementsByTagName('td').Date.innerHTML;
 
                 let txt2post = `האם אתם בטוחים לשחזר את הנסיעה של : ${patientName}
-                                                                                                    מ - ${origin} ל - ${destenation}
-                                                                                                    בתאריך -  ${date}`;
+                                                                                                                                    מ - ${origin} ל - ${destenation}
+                                                                                                                                    בתאריך -  ${date}`;
 
 
                 swal({
@@ -823,8 +832,8 @@
                 let date = tr.getElementsByTagName('td').Date.innerHTML;
 
                 let txt2post = `האם אתם בטוחים למחוק את הנסיעה של : ${patientName}
-                                                                                                                        מ - ${origin} ל - ${destenation}
-                                                                                                                        בתאריך -  ${date}`;
+                                                                                                                                                        מ - ${origin} ל - ${destenation}
+                                                                                                                                                        בתאריך -  ${date}`;
                 let deleteMe = [];
                 deleteMe.push(ridePatNum);
 
@@ -840,13 +849,15 @@
                     closeOnCancel: false
                 }, function (isConfirm) {
                     if (isConfirm) {
+                        $('#wait').show();
                         $.ajax({
                             dataType: "json",
                             url: "WebService.asmx/ChangeArrayOF_RidePatStatuses",
                             contentType: "application/json; charset=utf-8",
                             type: "POST",
-                            data: JSON.stringify({ newStatus: 'נמחקה', ridePatNums: deleteMe }),
+                            data: JSON.stringify({ newStatus: 'נמחקה', ridePatNums: deleteMe, clientUTCTimeStemp: new Date().toUTCString() }),
                             success: function (data) {
+                                $('#wait').hide();
                                 refreshTable();
                                 swal({
                                     title: "ההסעה סומנה כמחוקה 🗑️",
@@ -857,7 +868,10 @@
                                 //right after
                                 setTimeout(function () { ImportDataByTimeFilters() }, 1001);//literally means go fetch new data from server side with the same time frame
                             },
-                            error: function (err) { alert("Error in deleteRidePat:" + err.responseText); }
+                            error: function (err) {
+                                $('#wait').hide();
+                                alert("Error in deleteRidePat:" + err.responseText);
+                            }
                         });
 
                     } else {
